[gd_scene load_steps=12 format=3 uid="uid://86edlj0cxajg"]

[ext_resource type="Script" path="res://scipts/character.gd" id="1_omyan"]
[ext_resource type="AudioStream" uid="uid://bfomuihqq5oor" path="res://assets/ogg sound effect/shotgun.ogg" id="3_fn6mh"]
[ext_resource type="PackedScene" uid="uid://rqmebc5deiki" path="res://scenes/sawed_off_without_shell.tscn" id="4_6oubh"]
[ext_resource type="AudioStream" uid="uid://dqqp0ownpbuqk" path="res://shotgun-fast-reload.ogg" id="5_4n5i7"]
[ext_resource type="AudioStream" uid="uid://cdtt3onqyyxw7" path="res://empty-gun-shot-6209.ogg" id="5_5m06h"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ampoy"]

[sub_resource type="Animation" id="Animation_3fiu7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.021043, -0.408946, -0.849099)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.170362, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_162gh"]
resource_name = "reload"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.021043, -0.408946, -0.849099), Vector3(0.021043, -0.408946, -0.784771), Vector3(0.021043, -0.75364, -0.774825), Vector3(0.021043, -0.833461, -0.260825), Vector3(0.021043, -0.354639, -0.744985), Vector3(0.021, -0.409, -0.745)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.170362, 0), Vector3(0.313787, 0.1792, 0.0558539), Vector3(-0.857082, 0.262022, -0.200013), Vector3(-0.884345, 2.80666, -2.89036), Vector3(0.26952, 0.176808, 0.0475396), Vector3(0, 0.176278, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}

[sub_resource type="Animation" id="Animation_r6w13"]
resource_name = "shoot"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.18, 0.25, 0.32, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.021043, -0.408946, -0.849099), Vector3(0.021043, -0.408946, -0.728509), Vector3(0.021043, -0.43699, -0.728509), Vector3(0.021043, -0.411805, -0.737336), Vector3(0.021043, -0.404181, -0.752839), Vector3(0.021043, -0.404181, -0.752839), Vector3(0.021, -0.409, -0.849)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.09, 0.18, 0.25, 0.32, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.170362, 0), Vector3(0.247028, 0.17575, 0.0433956), Vector3(0.338411, 0.180714, 0.0605827), Vector3(0.260809, 0.176386, 0.0459286), Vector3(0.231338, 0.175072, 0.0405333), Vector3(0.231338, 0.175072, 0.0405333), Vector3(0, 0.174533, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3upai"]
_data = {
"RESET": SubResource("Animation_3fiu7"),
"reload": SubResource("Animation_162gh"),
"shoot": SubResource("Animation_r6w13")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vvwj4"]

[node name="CharacterBody3D" type="CharacterBody3D"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0.0155709, -0.0430239, 0.0182762)
collision_layer = 32
collision_mask = 35
script = ExtResource("1_omyan")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00424743, 0.00575495, -0.00590277)
mesh = SubResource("CapsuleMesh_ampoy")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0157962, 0.882419, 0)

[node name="Camera3D" type="Camera3D" parent="head"]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, -0.391727, -0.592321)
fov = 64.3658

[node name="gun" parent="head/Camera3D" instance=ExtResource("4_6oubh")]
transform = Transform3D(0.394209, 0, 0.0678156, 0, 0.4, 0, -0.0678156, 0, 0.394209, 0.021043, -0.408946, -0.849099)

[node name="AnimationPlayer" type="AnimationPlayer" parent="head/Camera3D/gun"]
libraries = {
"": SubResource("AnimationLibrary_3upai")
}

[node name="OmniLight3D" type="SpotLight3D" parent="head"]
transform = Transform3D(2.34486, -0.866972, 4.25078e-07, 0.866945, 2.34478, 0.0197651, -0.00685473, -0.0185384, 2.49992, 0.322768, 0.919105, -0.701738)
light_color = Color(0.901111, 0.884822, 7.70092e-07, 1)
light_energy = 5.421
light_indirect_energy = 9.96
light_volumetric_fog_energy = 2.73
light_size = 30.21
light_specular = 1.78
light_bake_mode = 0
shadow_enabled = true
spot_range = 5.92307
spot_angle = 28.0108

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_vvwj4")

[node name="sfx_shot" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_fn6mh")

[node name="sfx_reload" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_4n5i7")

[node name="sfx_clicking" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_5m06h")
